<resources>
    <string name="app_name">Bacara</string>
    <string name="home">Home</string>
    <string name="camera">Translate</string>
    <string name="profile">Profile</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera and storage permission.</string>
    <string name="bacara_logo">Bacara Logo</string>
    <string name="skip_introduction">Skip Introduction</string>
    <string name="next">Next</string>
    <string name="bacara_description">By using Bacara, you are working together with us to help deaf and mute people to communicate like us</string>
    <string name="title_camera">Real Time Detection</string>
    <string name="camera_description">We apply real time detection to detect \nhand sign language movements</string>
    <string name="audio_description">You can hear the translated voice directly \nfrom Bacara by clicking the speaker button \non the translation page</string>
    <string name="title_audio">Translated Voice</string>
    <string name="start">Start Now</string>
    <string name="wicara_team">Wicara Team</string>
    <string name="email">B21-CAP0027@bangkit.academy</string>
    <string name="date_join">15 February 2021</string>
    <string name="joined_date">Joined Date</string>
    <string name="slogan">Be Together \nEveryone Can Talk Now</string>
    <string name="story">Features</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Create New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_signup">Email</string>
    <string name="register_signup">Register</string>
    <string name="translated_text">Translation</string>
    <string name="translate">TEXT TRANSLATION</string>
    <string name="subscription">Subscription</string>
    <string name="subscription_status">Premium User</string>
    <string name="username_dummy">wicarateam</string>
    <string name="game">Play Game</string>
    <string name="report_bug">Report Bug</string>
    <string name="library">Library</string>
    <string name="back_button">Back Button</string>
    <string name="report_bug_image">Report Bug Image</string>
    <string name="library_image_view">Library Image View</string>
    <string name="game_image_view">Game Image View</string>
    <string name="profile_image_view">Profile Image View</string>
    <string name="real_time_detect_image">Real Time Detect Image</string>
    <string name="tagline">"Menyatukan hati yang bicara"</string>
    <string name="under_development">Under Development</string>
</resources>