<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".ui.home.HomeActivity">

    <FrameLayout
        android:id="@+id/layout_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_background_white_blue"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorBlue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="@id/logo"
                app:layout_constraintTop_toTopOf="@id/logo" />

            <TextView
                android:id="@+id/tv_slogan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/slogan"
                android:textColor="@color/colorBlue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_app_name" />

            <TextView
                android:id="@+id/tv_story"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="85dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/story"
                android:textColor="@color/colorWhite"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_slogan" />

            <ImageView
                android:id="@+id/iv_game"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/game"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_story"
                android:contentDescription="@string/game_image_view" />

            <TextView
                android:id="@+id/game"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/game"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/iv_game"
                app:layout_constraintStart_toStartOf="@id/iv_game"
                app:layout_constraintTop_toBottomOf="@id/iv_game" />

            <ImageView
                android:id="@+id/iv_library"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/library"
                app:layout_constraintStart_toEndOf="@id/iv_game"
                app:layout_constraintTop_toBottomOf="@id/tv_story"
                android:contentDescription="@string/library_image_view" />

            <TextView
                android:id="@+id/library"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/library"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/iv_library"
                app:layout_constraintStart_toStartOf="@id/iv_library"
                app:layout_constraintTop_toBottomOf="@id/iv_library" />

            <ImageView
                android:id="@+id/iv_report"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/report"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/game"
                android:contentDescription="@string/report_bug_image" />

            <TextView
                android:id="@+id/report"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/report_bug"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/iv_report"
                app:layout_constraintStart_toStartOf="@id/iv_report"
                app:layout_constraintTop_toBottomOf="@id/iv_report" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>