<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <FrameLayout
        android:id="@+id/layout_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_background_blue"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/user_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile"
                android:contentDescription="@string/profile_image_view" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wicara_team"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/imageView"
                app:layout_constraintStart_toStartOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/colorWhiteGrey"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/join_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/joined_date"
                android:textColor="@color/colorWhiteGreySec"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/tv_profile"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_join_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/date_join"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_profile"
                app:layout_constraintTop_toBottomOf="@+id/join_date" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_join_date" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/username"
                android:textColor="@color/colorWhiteGreySec"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/tv_profile"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/username_dummy"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_profile"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <TextView
                android:id="@+id/subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/subscription"
                android:textColor="@color/colorWhiteGreySec"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/tv_profile"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/tv_subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/subscription_status"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_profile"
                app:layout_constraintTop_toBottomOf="@+id/subscription" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subscription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>